# cora

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: linting.yml  testing.yml
cora/tests/: test_main.py
cora/tests/fixtures/: code.py  expected_output.md  input.md
librep/: __init__.py
librep/tests/: test_main.py
librep/tests/fixtures/: expected_output.md  test_filenotfound_input.md  test_input.md  test_ref_dir_expected_output.md  test_ref_dir_input.md
