[metadata]
name = repa
description = Python-based command line tool to replace text/code in files
version = attr: cora.__version__
keywords = tools
url = https://github.com/umami-hep/cora

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires=
packages = find: